--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- hero-image -->
     <section class="section-outer section-hero-image swiper-container">
             <ul class="slider-hero-image swiper-wrapper">
-                <li class="slider-hero-image_item swiper-slide" style="background-image: url(/img/hero\ image.png);">
+                <li class="slider-hero-image_item swiper-slide" style="background-image: url(/src/img/hero\ image.png);">
                     <div class=" section-inner slider-hero-image_item-content vertical-indent vertical-indent--l">
                         <h5>PLAN YOUR LIFE</h5>
                         <h2>Increase your <span>productivity</span></h2>
@@ -149,11 +149,11 @@
     <!-- customers -->
     <section class="section-outer section-customers">
         <div class="section-inner vertical-indent vertical-indent--m">
-            <a href="#"><img src="img/bitbucket.svg" alt="" aria-label="bitbucket" ></a>
-            <a href="#"><img src="img/apple-watch.svg" alt="" aria-label="apple-watch"></a>
-            <a href="#"><img src="img/facebook.svg" alt="" aria-label="facebook"></a>
-            <a href="#"><img src="img/atlassian.svg" alt="" aria-label="atlassian"></a>
-            <a href="#"><img src="img/audi.svg" alt="" aria-label="audi"></a>
+            <a href="#"><img src="src/img/bitbucket.svg" alt="" aria-label="bitbucket" ></a>
+            <a href="#"><img src="src/img/apple-watch.svg" alt="" aria-label="apple-watch"></a>
+            <a href="#"><img src="src/img/facebook.svg" alt="" aria-label="facebook"></a>
+            <a href="#"><img src="src/img/atlassian.svg" alt="" aria-label="atlassian"></a>
+            <a href="#"><img src="src/img/audi.svg" alt="" aria-label="audi"></a>
         </div>
     </section>
     <!-- / customers -->
@@ -200,21 +200,21 @@
                 </li>
                 <li class="features-list_item">
                     <div class="features-list_item-icon">
-                        <img src="img/Vector 2.4.svg" alt="">
+                        <img src="src/img/Vector 2.4.svg" alt="">
                     </div>
                     <div class="features-list_item-title">Files</div>
                     <div class="features-list_item-text">No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</div>
                 </li>
                 <li class="features-list_item">
                     <div class="features-list_item-icon">
-                        <img src="img/Vector 2.5.svg" alt="">
+                        <img src="src/img/Vector 2.5.svg" alt="">
                     </div>
                     <div class="features-list_item-title">Meeting chats</div>
                     <div class="features-list_item-text">Vim ne tacimates neglegentur. Erat diceret omittam at est.</div>
                 </li>
                 <li class="features-list_item">
                     <div class="features-list_item-icon">
-                        <img src="img/Vector 2.6.svg" alt="">
+                        <img src="src/img/Vector 2.6.svg" alt="">
                     </div>
                     <div class="features-list_item-title">Save events</div>
                     <div class="features-list_item-text">Nisl idque mel ea, nominati voluptatum.</div>
@@ -233,14 +233,14 @@
     <section class="section-outer section-stats">
         <div class="section-stats_left">
              <div class="section-stats-icon">
-                 <img src="img/Group.svg" alt="">
+                 <img src="src/img/Group.svg" alt="">
              </div>   
              <div class="section-stats-number">89%</div>   
              <div class="section-stats-text">Customers who have increased their productivity</div>   
         </div>
         <div class="section-stats_right">
              <div class="section-stats-icon">
-                 <img src="img/Group 4.svg" alt="">
+                 <img src="src/img/Group 4.svg" alt="">
              </div>   
              <div class="section-stats-number">3123</div>   
              <div class="section-stats-text">
@@ -261,14 +261,14 @@
                     <ul class="slider-blog-wrapper swiper-wrapper">
                         <li class="slider-blog-wrapper_item swiper-slide">
                             <div class="slider-blog-wrapper_item-gallery">
-                                <a href="img/Rectangle 3.png" data-fslightbox="slide-1" class="image-link image-link_big" aria-label="Image">
-                                    <img src="img/Rectangle 3.png" width="268" height="267" alt="">
+                                <a href="src/img/Rectangle 3.png" data-fslightbox="slide-1" class="image-link image-link_big" aria-label="Image">
+                                    <img src="src/img/Rectangle 3.png" width="268" height="267" alt="">
                                 </a>
-                                <a href="img/Rectangle 3.1.png" data-fslightbox="slide-1" class="image-link image-link_small-1" aria-label="Image 1">
-                                    <img src="img/Rectangle 3.1.png" width="127" height="127" alt="">
+                                <a href="src/img/Rectangle 3.1.png" data-fslightbox="slide-1" class="image-link image-link_small-1" aria-label="Image 1">
+                                    <img src="src/img/Rectangle 3.1.png" width="127" height="127" alt="">
                                 </a>
-                                <a href="img/Rectangle 3.2.png" data-fslightbox="slide-1" class="image-link image-link_small-2" aria-label="Image 2">
-                                    <img src="img/Rectangle 3.2.png" width="127" height="127" alt="">
+                                <a href="src/img/Rectangle 3.2.png" data-fslightbox="slide-1" class="image-link image-link_small-2" aria-label="Image 2">
+                                    <img src="src/img/Rectangle 3.2.png" width="127" height="127" alt="">
                                 </a>
                             </div>
                             <div class="slider-blog-wrapper_item-content">
@@ -285,14 +285,14 @@
 
                         <li class="slider-blog-wrapper_item swiper-slide">
                             <div class="slider-blog-wrapper_item-gallery">
-                                <a href="img/Rectangle 3.png" data-fslightbox="slide-2" class="image-link image-link_big" aria-label="Image">
-                                    <img src="img/Rectangle 3.png" width="268" height="267" alt="">
+                                <a href="src/img/Rectangle 3.png" data-fslightbox="slide-2" class="image-link image-link_big" aria-label="Image">
+                                    <img src="src/img/Rectangle 3.png" width="268" height="267" alt="">
                                 </a>
-                                <a href="img/Rectangle 3.1.png" data-fslightbox="slide-2" class="image-link image-link_small-1" aria-label="Image 1">
-                                    <img src="img/Rectangle 3.1.png" width="127" height="127" alt="">
+                                <a href="src/img/Rectangle 3.1.png" data-fslightbox="slide-2" class="image-link image-link_small-1" aria-label="Image 1">
+                                    <img src="src/img/Rectangle 3.1.png" width="127" height="127" alt="">
                                 </a>
-                                <a href="img/Rectangle 3.2.png" data-fslightbox="slide-2" class="image-link image-link_small-2" aria-label="Image 2">
-                                    <img src="img/Rectangle 3.2.png" width="127" height="127" alt="">
+                                <a href="src/img/Rectangle 3.2.png" data-fslightbox="slide-2" class="image-link image-link_small-2" aria-label="Image 2">
+                                    <img src="src/img/Rectangle 3.2.png" width="127" height="127" alt="">
                                 </a>
                             </div>
                             <div class="slider-blog-wrapper_item-content">
@@ -334,7 +334,7 @@
                                 <div class="slider-qoutes-item-content_text"> 1 Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel
                                 diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -344,7 +344,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -354,7 +354,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -364,7 +364,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -374,7 +374,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -384,7 +384,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -394,7 +394,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
@@ -404,7 +404,7 @@
                                     usu vidit tractatos, vero tractatos ius an, in mel
                                     diceret persecuti.</div>
                                 <div class="slider-qoutes-item-content_photo">
-                                    <img src="img/Ellipse 2.1.png" width="62" height="63" alt="">
+                                    <img src="src/img/Ellipse 2.1.png" width="62" height="63" alt="">
                                 </div>
                             </div>
                         </li>
