--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- hero-image -->
     <section class="section-outer section-hero-image swiper-container">
             <ul class="slider-hero-image swiper-wrapper">
-                <li class="slider-hero-image_item swiper-slide" style="background-image: url(/src/img/hero\ image.png);">
+                <li class="slider-hero-image_item swiper-slide" style="background-image: url(./src/img/hero\ image.png);">
                     <div class=" section-inner slider-hero-image_item-content vertical-indent vertical-indent--l">
                         <h5>PLAN YOUR LIFE</h5>
                         <h2>Increase your <span>productivity</span></h2>
@@ -162,7 +162,7 @@
     <section class="section-outer section-plan-and-manage">
         <div class="section-inner vertical-indent vertical-indent--l">
             <div class="section-plan-and-manage_content">
-                <img src="img/illustration.png" alt="" class="aside-image">
+                <img src="./src/img/illustration.png" alt="" class="aside-image">
                 <h5>DESKTOP AND MOBILE APP</h5>
                 <h3>Plan <span>and</span> manage</h3>
                 <div class="text">
@@ -193,7 +193,7 @@
             <ul class="features-list">
                 <li class="features-list_item">
                     <div class="features-list_item-icon">
-                        <img src="img/Vector 2.svg" alt="">
+                        <img src="./src/img/Vector 2.svg" alt="">
                     </div>
                     <div class="features-list_item-title">Overview</div>
                     <div class="features-list_item-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
